--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <!-- <link rel="stylesheet" href="../node_modules/@chatscope/chat-ui-kit-styles/dist/default/styles.min.css"> -->
+    <link rel="stylesheet" href="../node_modules/@chatscope/chat-ui-kit-styles/dist/default/styles.min.css">
     <title>Vite + React</title>
   </head>
   <body>
